# substreams-eth-token-transfers

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs  substreams.yaml
abi/: erc20.json
proto/: filesink.proto  transfers.proto
src/: lib.rs
src/abi/: erc1155.rs
src/pb/: eth.filesink.v1.rs  eth.token.transfers.v1.rs  mod.rs  substreams.sink.files.v1.rs
