[package]
name = "substreams-eth-token-transfers"
version = "0.2.0"
description = "Substream Ethereum Token Transfers tracking"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-eth-token-transfers"
license = "Apache-2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.8"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"